<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id ="@+id/main_layout"
    android:orientation="horizontal"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    android:paddingBottom="10dip">
    <LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
    	android:layout_centerVertical="true">
		<TextView
			android:text="@string/app_name"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="20dip"
			android:textSize="24.5sp" />
		<TextView
			android:text="@string/app_description"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_marginBottom="20dip"
			android:textSize="15sp" />
		<Button
			android:id="@+id/start_button"
			android:layout_width="150dip"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="5dip"
			android:text="@string/start_label" />
		<Button
			android:id="@+id/exit_button"
			android:layout_width="150dip"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="5dip"
			android:text="@string/exit_label" />
	</LinearLayout>
</RelativeLayout>