<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
	android:paddingBottom="10dip"
	android:gravity="center"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:orientation="vertical">
	<TextView
		android:gravity="center"
		android:id="@+id/update_content"
		android:paddingBottom="10dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/updater_text" />
	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:stretchColumns="*">
		<TableRow>
			<Button
				android:text="@string/update_text"
				android:id="@+id/update_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<Button
				android:text="@string/cancel_text"
				android:id="@+id/cancel_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		</TableRow>
	</TableLayout>
</LinearLayout>